# CMakeList.txt : CMake project for Myter Engine CMake, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Myter Engine CMake")

# Add source to this project's executable.
add_executable (CMakeTarget "Myter Engine CMake.cpp" "Myter Engine CMake.h")

# TODO: Add tests and install targets if needed.
